# PointCloud

./: .zshrc  README.md
Notes/: Feb. 20 GMM+pclfilter.md  Feb_14_Voxel_Grid_Filter.md  Feb_17_Birdseye.md  Feb_18_Gaussian Mixed Model.md  Feb_20_GMM_pclfilter.md
lidar_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
lidar_ws/devel/lib/pcl_process/: pcl_process_node
lidar_ws/devel/lib/pcl_test/: pcl_test_node
lidar_ws/devel/lib/pkgconfig/: pcl.pc  pcl_process.pc  pcl_test.pc  squeezeseg_ros.pc
lidar_ws/devel/share/pcl/cmake/: pclConfig.cmake
lidar_ws/devel/share/pcl_process/cmake/: pcl_processConfig.cmake
lidar_ws/devel/share/pcl_test/cmake/: pcl_testConfig.cmake
lidar_ws/devel/share/squeezeseg_ros/cmake/: squeezeseg_rosConfig.cmake
lidar_ws/src/pcl_process/: CMakeLists.txt  package.xml
lidar_ws/src/pcl_process/include/: pcl_core.h
lidar_ws/src/pcl_process/src/: pcl_core.cpp  pcl_node.cpp  pcl_tools.cpp
lidar_ws/src/pcl_test/include/: pcl_test_core.h
lidar_ws/src/pcl_test/src/: pcl_test_core.cpp  pcl_test_node.cpp
scripts/: bag_preprocess.py
source/: gantt
